--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,52 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background: green;
+  box-sizing: border-box;
+}
+.card {
+  font-family: "Arimo", sans-serif;
+  text-align: center;
+  background: white;
+  margin: auto;
+  height: 200px;
+  width: 250px;
+  padding: 20px;
+  font-size: 80px;
+  padding-top: 180px;
+  border: 1px solid black;
+  border-radius: 5px;
+  position: relative;
+}
+.card::before {
+  position: absolute;
+  top: 20px;
+  left: 020px;
+  font-size: 80px;
+}
+.card::after {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 80px;
+}
+.card.spade::before,
+.card.spade::after {
+  content: "\2660";
+}
+.card.club::before,
+.card.club::after {
+  content: "\2663";
+}
+.card.heart::before,
+.card.heart::after {
+  content: "\2665";
+  color: red;
+}
+.card.diamond::before,
+.card.diamond::after {
+  content: "\2666";
+  color: red;
+}
+.card.heart,
+.card.diamond {
+  color: red;
+}
